# lua-gumbo

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .luacheckrc  .luacov  .travis.mk  .travis.yml  .travis.yml.in  .wordlist  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  LICENSE  Makefile  README.md  api.md  appveyor.yml  cdef.sed  clean-header.sed  compat.h  config.ld  configure  docs.lua  dump.lua  example.lua  findlua.mk  graph.dot  gumbo-0.4-4.rockspec  gumbo-cdef.lua  gumbo-scm-1.rockspec  gumbo.c  gumbo.lua  gumbo.tld  lgumbo.c  lgumbo.h  lualib.mk  (+8 more)
.travis/: platform.sh  setup_gumbo.sh  setup_lua.sh
doc/: api.md  contributing.md  doxygen-layout.xml  layout.css  libgumbo.doxy  releases.md  style.css  template.html
docs/: api.md  contributing.md  layout.css  libgumbo.doxy  redir.html  releases.md  style.css  template.html
examples/: dump.lua  find_links.lua  get_title.lua  graph.dot  graph.html  outline.lua  remove_by_id.lua  sanitizer.lua  table_align_fix.lua  text_content.lua
gumbo/: Buffer.lua  Set.lua  amalg.h  attributes.lua  buffer.c  buffer.lua  compat.h  constants.lua  element.lua  ffi-cdef.lua  ffi-parse.lua  ffi.lua  indent.lua  init.lua  parse.c  sanitize.lua  selector.lua  serialize.lua  util.c  util.lua
gumbo/dom/: Attr.lua  Attribute.lua  AttributeList.lua  CharacterData.lua  ChildNode.lua  Comment.lua  DOMException.lua  DOMTokenList.lua  Document.lua  DocumentFragment.lua  DocumentType.lua  Element.lua  ElementList.lua  HTMLCollection.lua  NamedNodeMap.lua  Node.lua  NodeList.lua  NonElementParentNode.lua  ParentNode.lua  Text.lua  assertions.lua  comment.lua  document.lua  element.lua  text.lua  util.lua
gumbo/serialize/: Indent.lua  html.lua  html5lib.lua  htmlmin.lua  table.lua  util.lua
gumbo/util/: buffer.lua  indent.lua
lib/: README.md  ascii.c  ascii.h  attribute.c  attribute.h  char_ref.c  char_ref.h  char_ref.rl  error.c  error.h  gumbo.h  macros.h  parser.c  parser.h  string_buffer.c  string_buffer.h  string_piece.h  svg_attrs.c  svg_tags.c  tag.c  tag_lookup.c  tag_lookup.h  tokenizer.c  tokenizer.h  utf8.c  utf8.h  util.c  util.h  vector.c  vector.h
mk/: build.mk  check.mk  compat.mk  deps.mk  dev.mk  dist.mk  doc.mk  gperf-filter.sed  gumbo.mk  lcovrc  lib-deps.cmake  lib-deps.mk  lib.mk  lua.mk  lualib.mk  mk2cmake.lua  ragel-filter.sed  rockspec.sh  test.mk  util.mk
mk/git-hooks/: pre-commit
test/: 4KiB.html  Set.lua  bench.html  bench.lua  buffer.lua  checkurl.sh  compare.lua  coverage.lua  dist-sha1sums.txt  dom.lua  edgecase.lua  gitlab-ci.yml  html5lib-test-runner.lua  htmlfmt.lua  limits.lua  misc.lua  ns.out.html  ns.table  runner.lua  sanitize.lua  selector.lua  serialize.lua  t1.html  t1.lua  t1.out.html  t1.table  tostring.lua  tree-construction.lua  trim.lua  util.lua
test/benchmark/: benchmark.c  benchmark.cc
test/data/: ns.table  t1.html
test/dom/: Attribute.lua  Comment-constructor.lua  Document-links.lua  Document-serialize.lua  Document-title.lua  DocumentType.lua  Element-childElementCount.lua  Element-classList.lua  Element-getElementsByClassName.lua  Element-namespaceURI.lua  Element-remove.lua  ElementList.lua  HTMLCollection-empty-name.lua  Node-appendChild.lua  Node-constants.lua  Node-insertBefore.lua  Node-isEqualNode.lua  Node-nodeValue.lua  Node-replaceChild.lua  Node-textContent.lua  getElementsByClassName-01.lua  getElementsByClassName-02.lua  getElementsByClassName.lua  getElementsByTagName.lua  interfaces.lua  metatables.lua  outerHTML.lua  walk.lua
test/git-hooks/: commit-msg  pre-commit
test/parser/: README.md  attribute.c  char_ref.c  main.c  parser.c  string_buffer.c  string_piece.c  test.c  test.h  test_utils.cc  test_utils.h  tokenizer.c  utf8.c  vector.c
test/tree-construction/: README.md
